Fix: fix click effect on tablet/desktop

--- a/src/ui/Navigation/navigation.module.scss
+++ b/src/ui/Navigation/navigation.module.scss
@@ -55,6 +55,10 @@
       outline: none;
       transform: scale(1.1);
     }
+
+    &:active {
+      transform: scale(0.9);
+    }
   }
 }
 
